# enchanter_core

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  provider.rs
src/agent/: mod.rs
src/protocol/: chat.rs  message.rs  mod.rs  response.rs  tool.rs
src/protocol/tests/: chat.rs  message.rs  mod.rs  response.rs  tool.rs
src/provider/: mock.rs  mod.rs  openai.rs
src/provider/tests/: mock_provider.rs  mod.rs  provider_types.rs
src/tools/: context.rs  error.rs  mod.rs  registry.rs  tool.rs
