[package]
name = "enchanter-core"
version = "0.1.0"
edition = "2024"
description = "Minimal modular agent harness — OpenAI compatible"
license = "MIT"
repository = "https://github.com/andrewthecodertx/enchanter-core"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
